--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,3 +1,17 @@
 .App {
+  width: 60%;
+  margin: 0 auto;
+}
+
+header{
   text-align: center;
+  font-size: 32px;
+  font-weight: 600;
+  margin: 20px 0 40px;
+}
+
+@media (max-width: 900px) {
+  .App{
+    width: 80%;
+  }
 }
