--- a/my-app/src/features/articlesForm/ArticlesForm.css
+++ b/my-app/src/features/articlesForm/ArticlesForm.css
@@ -1,3 +1,35 @@
 form {
-    background-color: aliceblue;
+    text-align: center;
+    padding: 30px 0;
+    background-color: rgb(255, 255, 255);
+    border-radius: 5px;
 }
+input{
+    width: 300px;
+    border: 2px solid rgb(91, 192, 222);
+    border-radius: 3px;
+    padding: 5px;
+    box-sizing: border-box;
+}
+input:focus{
+    outline: none;
+}
+.add-btn{
+    width: 300px;
+    border: none;
+    border-radius: 15px;
+    background-color: rgb(91, 192, 222);
+    color: rgb(255, 255, 255);
+    font-size: 16px;
+    padding: 5px 0;
+    font-weight: 500;
+}
+.input-div{
+    margin-bottom: 10px;
+}
+@media (max-width: 500px) {
+    input, .add-btn{
+        width: 200px;
+    }
+}
+
